# nidana

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: run_benchmark.py
src/: __main__.py  core.py
src/nidana/: __init__.py  benchmark.py  cli.py  evaluator.py  leaderboard.py  models.py  report.py  scorer.py
src/nidana/vignettes/: __init__.py  generator.py  specialties.py
tests/: test_core.py  test_integration.py  test_scorer.py  test_vignettes.py
