[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nidana-bench"
version = "0.1.0"
description = "Nidana -- LLM Clinical Reasoning Benchmark across 20 Medical Specialties"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Mukunda Katta" },
]
keywords = ["medical-ai", "benchmark", "clinical-reasoning", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "click>=8.0,<9.0",
    "rich>=13.0,<14.0",
    "anthropic>=0.30.0",
    "openai>=1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.scripts]
nidana = "nidana.cli:cli"

[project.urls]
Homepage = "https://github.com/mukundakatta/nidana"
Repository = "https://github.com/mukundakatta/nidana"

[tool.hatch.build.targets.wheel]
packages = ["src/nidana"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
